kubernetes/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: piper-kt
  name: frontend-service
  labels:
    app: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: zuccherosintattico/piperkt-frontend-service
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: piper-kt
  name: frontend-service
spec:
  selector:
    app: frontend-service
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
      name: frontend-service
