kubernetes/notifications.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: piper-kt
  name: notifications-service
  labels:
    app: notifications-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
        - name: notifications-service
          image: zuccherosintattico/piperkt-notifications-service:test
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: piper-kt
  name: notifications-service
spec:
  selector:
    app: notifications-service
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
      name: notifications-service
