kubernetes/nginx-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    resource:
      apiGroup: v1
      kind: StorageBucket
      name: static-assets
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: users-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: friendships-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: multimedia-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: servers-service
            port:
              number: 8080

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
